# PFE_Outil-de-prevision-du-prix-d-une-matiere-premiere

./: .gitignore  API.py  Agent_explicateur_POC.py  README.md  Untitled.ipynb  Unused_function.py  affichage.py  app_streamlit.py  app_streamlit_test.py  code pour récupération des données  conecteur.py  config_param.py  data_utils.py  download_function.py  fonction.ipynb  formatage_pydantic.py  lstm_oil_model.h5  main.py  model_training.py  model_training_prod_ready.py  pyproject.toml  recup_data.py  testé.ipynb  wti_oil.csv  wti_oil_normalized.csv
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Data/: stock_config.json
Data/faiss_index/: documents.pkl
Pipeline_Data/: le_test.py  pipeline.py  test_rag.py  test_rag_copy.py
Pipeline_Data/data/: article_fetcher.py  filter.py  gdelt_fetcher.py
Pipeline_Data/database/: gdelt.sql  mysql_connector.py  mysql_connector2.py  schema.sql
Pipeline_Data/databse/: mysql_connector.py
Pipeline_Data/models/: rag_agent.py  test_model.py  trieur_agent.py
Pipeline_Data/prompt/: rag_prompt.txt  trieur_prompt.txt
Pipeline_Data/utils/: config_loader.py  logger.py
Test/: Initialize_ticker.ipynb  Model-training-Prod-ready.py  Untitled.ipynb  download_function.py  plot_data.py  testcode-modeltraining.py
Test (code pas utilise)/: add_TA_indicator.py  ticker_info.json
Version_Finale_Agent_Explicateur/: Comment_je_marche.md  config.py  core_agent.py  data_provider.py  functions.py  llm_client.py  main.py  models.py  test_standalone.py
config/: config.yaml
