[project]
name = "pfe-outil-de-prevision-du-prix-d-une-matiere-premiere"
version = "0.1.0"
description = ""
authors = [
    {name = "Luckuah",email = "lululorang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.7"
jupyterlab = "^4.4.9"
ipykernel = "^6.30.1"

